[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peftml"
version = "2.0.0"
description = "Production-grade PyTorch model compression: pruning, quantization, knowledge distillation, and LoRA/QLoRA fine-tuning."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Tanup Vats" }]
keywords = [
    "pytorch",
    "model-compression",
    "quantization",
    "pruning",
    "knowledge-distillation",
    "lora",
    "qlora",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
onnx = ["onnx>=1.14", "onnxruntime>=1.16"]
all = ["peftml[dev,onnx]"]

[project.urls]
Homepage = "https://github.com/peftml/peftml"
Documentation = "https://peftml.readthedocs.io"
Repository = "https://github.com/peftml/peftml"
Issues = "https://github.com/peftml/peftml/issues"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
